- Update to latest snapshot (20130304) and unbreak this port - Bump PORTREVISION for distfile change
Changes:	https://code.google.com/p/google-js-test/source/list
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315990 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/gjstest/Makefile
+++ b/devel/gjstest/Makefile
@@ -3,9 +3,11 @@
 
 PORTNAME=	gjstest
 PORTVERSION=	1.0.8
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	devel
-MASTER_SITES=	GOOGLE_CODE
+MASTER_SITES=	GOOGLE_CODE \
+		LOCAL/sunpoet
+DISTNAME=	${PORTNAME}-${PORTVERSION}.${SNAPSHOT}
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Lightweight JS unit testing using the V8 engine
@@ -26,17 +28,17 @@ CXXFLAGS+=	-L${LOCALBASE}/lib
 USE_BZIP2=	yes
 USE_GMAKE=	yes
 
-BROKEN=		fails to build
-
 PROJECTHOST=	google-js-test
+SNAPSHOT=	20130304
 
 post-patch:
-	@${REINPLACE_CMD} -e '/export PREFIX = / s|/usr/local|${PREFIX}|' \
-		${WRKSRC}/Makefile
-	@${REINPLACE_CMD} -e 's|CLOCK_PROCESS_CPUTIME_ID|CLOCK_PROF|' \
-		${WRKSRC}/base/timer.cc
-	@${REINPLACE_CMD} -e '1 s|/bin/bash|${LOCALBASE}/bin/bash|' \
-		${WRKSRC}/gjstest/internal/cpp/generate_builtin_paths.sh \
-		${WRKSRC}/scripts/*.sh
+	@${REINPLACE_CMD} \
+		-e 's|\(Get\)\(PointerFromInternalField\)|\1Aligned\2|' \
+		-e 's|\(Set\)\(PointerInInternalField\)|\1Aligned\2|' \
+		${WRKSRC}/gjstest/internal/cpp/typed_arrays.cc
+	@${REINPLACE_CMD} -e '/export PREFIX = / s|/usr/local|${PREFIX}|' ${WRKSRC}/Makefile
+	@${REINPLACE_CMD} -e 's|CLOCK_PROCESS_CPUTIME_ID|CLOCK_PROF|' ${WRKSRC}/base/timer.cc
+	@${REINPLACE_CMD} -e '1 s|/bin/bash|${LOCALBASE}/bin/bash|' ${WRKSRC}/gjstest/internal/cpp/generate_builtin_paths.sh ${WRKSRC}/scripts/*.sh
+	@${REINPLACE_CMD} -e 's|^g++ |${CXX} |' ${WRKSRC}/scripts/cc_binary_build.sh
 
 .include <bsd.port.mk>
