--- a/devel/p5-MooseX-App/Makefile
+++ b/devel/p5-MooseX-App/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	MooseX-App
-PORTVERSION=	1.17
+PORTVERSION=	1.21
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -34,6 +34,7 @@ MAN3=		MooseX::App.3 \
 		MooseX::App::Meta::Role::Class::Base.3 \
 		MooseX::App::Meta::Role::Class::Command.3 \
 		MooseX::App::ParsedArgv.3 \
+		MooseX::App::ParsedArgv::Element.3 \
 		MooseX::App::Plugin::BashCompletion.3 \
 		MooseX::App::Plugin::Color.3 \
 		MooseX::App::Plugin::Config.3 \
