--- a/devel/py-distutils-extra/Makefile
+++ b/devel/py-distutils-extra/Makefile
@@ -1,14 +1,10 @@
-# New ports collection makefile for:	py-distutils-extra
-# Date created:				07 Mar 2010
-# Whom:					Ju Pengfei <jupengfei@gmail.com>
-#
+# Created by: Ju Pengfei <jupengfei@gmail.com>
 # $FreeBSD$
-#
 
 PORTNAME=	distutils-extra
-PORTVERSION=	2.31
+PORTVERSION=	2.37
 CATEGORIES=	devel python
-MASTER_SITES=	https://launchpadlibrarian.net/84711319/ \
+MASTER_SITES=	https://launchpadlibrarian.net/116392602/ \
 		LOCAL/sunpoet
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DISTNAME=	python-${PORTNAME}-${PORTVERSION}
@@ -17,10 +13,9 @@ MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Add support for i18n, documentation, and icons to distutils
 
 LICENSE=	GPLv2
-LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USE_PYTHON=	yes
-USE_PYDISTUTILS=	easy_install
+USE_PYDISTUTILS=easy_install
 PYDISTUTILS_PKGNAME=	python_distutils_extra
 PYDISTUTILS_NOEGGINFO=	yes
 
