--- a/net/py-zope.proxy/Makefile
+++ b/net/py-zope.proxy/Makefile
@@ -1,25 +1,22 @@
-# New ports collection makefile for:	py-zopeproxy
-# Date created:		22 Nov, 2008
-# Whom:			Wen Heping <wenheping@gmail.com>
-#
+# Created by: Wen Heping <wenheping@gmail.com>
 # $FreeBSD$
-#
 
 PORTNAME=	zope.proxy
-PORTVERSION=	3.6.1
-PORTREVISION=	3
+PORTVERSION=	4.1.3
 CATEGORIES=	net python zope
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
+DIST_SUBDIR=	zope
 
 MAINTAINER=	zope@FreeBSD.org
 COMMENT=	Generic Transparent Proxies
 
+LICENSE=	ZPL21
+
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}zope.interface>=3.3.0:${PORTSDIR}/devel/py-zope.interface
-RUN_DEPENDS:=	${BUILD_DEPENDS}
 
 USE_ZIP=	yes
-USE_PYTHON=	2.5+
+USE_PYTHON=	yes
 USE_PYDISTUTILS=	easy_install
 PYEASYINSTALL_ARCHDEP=	yes
 
