- Move distfile to PECL directory - Cleanup Makefile header
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316002 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/pecl-gupnp/Makefile
+++ b/net/pecl-gupnp/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	pecl-gupnp
-# Date created:		2012-03-16
-# Whom:			Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
-#
+# Created by: Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	gupnp
 PORTVERSION=	1.0.0
@@ -11,6 +7,7 @@ CATEGORIES=	net pear
 MASTER_SITES=	http://pecl.php.net/get/
 PKGNAMEPREFIX=	pecl-
 EXTRACT_SUFX=	.tgz
+DIST_SUBDIR=	PECL
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	GUPnP wrapper extension
