- Update to 2.2 - Provide an option for a newly implemented ncurses mode
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316007 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/httping/Makefile
+++ b/net/httping/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	httping
-PORTVERSION=	2.1
+PORTVERSION=	2.2
 CATEGORIES=	net
 MASTER_SITES=	http://www.vanheusden.com/httping/ \
 		CRITICAL
@@ -16,6 +16,19 @@ MAKE_JOBS_SAFE=	yes
 
 MAN1=		httping.1
 PLIST_FILES=	bin/httping
+
+OPTIONS_DEFINE=	NCURSES
+
+NCURSES_DESC=	ncurses support
+
+.include <bsd.port.options.mk>
+
+.if ${PORT_OPTIONS:MNCURSES}
+LIB_DEPENDS+=	fftw3:${PORTSDIR}/math/fftw3
+MAKE_ENV+=	SSL=yes NC=yes FW=yes
+CFLAGS+=	-I${LOCALBASE}/include
+LDFLAGS+=	-L${LOCALBASE}/lib
+.endif
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/${PORTNAME} ${PREFIX}/bin
