Update to version 2.0.3
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316011 35697150-7ecd-e111-bb59-0022644237b5

--- a/multimedia/lives/Makefile
+++ b/multimedia/lives/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	lives
-PORTVERSION=	1.8.2
+PORTVERSION=	2.0.3
 CATEGORIES=	multimedia
 MASTER_SITES=	http://salsaman.home.xs4all.nl/lives/current/
 DISTNAME=	LiVES-${PORTVERSION}
@@ -15,38 +15,17 @@ LICENSE=	GPLv3
 BUILD_DEPENDS=	${LOCALBASE}/include/linux/input.h:${PORTSDIR}/multimedia/v4l_compat \
 		${LOCALBASE}/bin/analyseplugin:${PORTSDIR}/audio/ladspa
 LIB_DEPENDS=	asound:${PORTSDIR}/audio/alsa-lib \
-		FLAC:${PORTSDIR}/audio/flac \
 		jack:${PORTSDIR}/audio/jack \
-		ogg:${PORTSDIR}/audio/libogg \
-		sndfile:${PORTSDIR}/audio/libsndfile \
-		vorbis:${PORTSDIR}/audio/libvorbis \
 		pulse:${PORTSDIR}/audio/pulseaudio \
-		gdbm:${PORTSDIR}/databases/gdbm \
-		dbus-1:${PORTSDIR}/devel/dbus \
-		execinfo:${PORTSDIR}/devel/libexecinfo \
 		oil:${PORTSDIR}/devel/liboil \
-		pthread-stubs:${PORTSDIR}/devel/libpthread-stubs \
-		orc:${PORTSDIR}/devel/orc \
-		pcre:${PORTSDIR}/devel/pcre \
-		aa:${PORTSDIR}/graphics/aalib \
-		cairo:${PORTSDIR}/graphics/cairo \
 		visual-0.4:${PORTSDIR}/graphics/libvisual04 \
 		opencv_calib3d:${PORTSDIR}/graphics/opencv \
-		opencv_core:${PORTSDIR}/graphics/opencv-core \
-		png15:${PORTSDIR}/graphics/png \
 		fftw3:${PORTSDIR}/math/fftw3 \
 		fftw3f:${PORTSDIR}/math/fftw3-float \
 		avcodec:${PORTSDIR}/multimedia/ffmpeg \
 		dv:${PORTSDIR}/multimedia/libdv \
-		theora:${PORTSDIR}/multimedia/libtheora \
-		vpx:${PORTSDIR}/multimedia/libvpx \
 		mjpegutils:${PORTSDIR}/multimedia/mjpegtools \
-		schroedinger:${PORTSDIR}/multimedia/schroedinger \
-		xvidcore:${PORTSDIR}/multimedia/xvid \
-		freetype:${PORTSDIR}/print/freetype2 \
-		expat:${PORTSDIR}/textproc/expat2 \
-		xcb:${PORTSDIR}/x11/libxcb \
-		fontconfig:${PORTSDIR}/x11-fonts/fontconfig
+		schroedinger:${PORTSDIR}/multimedia/schroedinger
 RUN_DEPENDS=	${LOCALBASE}/bin/analyseplugin:${PORTSDIR}/audio/ladspa \
 		mpg123:${PORTSDIR}/audio/mpg123 \
 		sox:${PORTSDIR}/audio/sox \
@@ -67,19 +46,15 @@ USE_BZIP2=	yes
 GNU_CONFIGURE=	yes
 USE_PKGCONFIG=	build
 USE_CSTD=	gnu89
-USE_ICONV=	yes
 USE_PYTHON=	yes
 USE_PERL5=	yes
 USE_CDRTOOLS=	yes
 USE_GHOSTSCRIPT_RUN=	yes
-USE_XORG=	ice pixman sm x11 xau xcomposite xcursor xdamage xdmcp xext \
-		xfixes xi xinerama xrandr xrender xtst
-USE_SDL=	sdl
-USE_GNOME=	gdkpixbuf2 gtk20
+USE_GNOME=	gtk20
 USE_LDCONFIG=	yes
 MAKE_JOBS_SAFE=	yes
 
-CONFIGURE_ARGS=	--disable-ldvgrab
+CONFIGURE_ARGS=	--disable-ldvgrab --disable-gtk3
 
 CPPFLAGS+=	-I${LOCALBASE}/include -fPIC
 LDFLAGS+=	-L${LOCALBASE}/lib -pthread
