--- a/devel/ocaml-cppo/Makefile
+++ b/devel/ocaml-cppo/Makefile
@@ -1,9 +1,5 @@
-# Ports collection makefile for:	cppo
-# Date created:			2011-12-26
-# Whom:				Michael Grunewald
-#
+# Created by: Michael Grunewald
 # $FreeBSD$
-#
 
 PORTNAME=	cppo
 PORTVERSION=	0.9.2
@@ -14,7 +10,6 @@ PKGNAMEPREFIX=	ocaml-
 MAINTAINER=	michael.grunewald@laposte.net
 COMMENT=	A simple preprocessor for OCaml
 
-USE_GZIP=	yes
 USE_GMAKE=	yes
 USE_OCAML=	yes
 MAKE_JOBS_UNSAFE=	yes
