- Update to 4.2.5P1 - Switch to new 'created by' header
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316014 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/isc-dhcp42-relay/Makefile
+++ b/net/isc-dhcp42-relay/Makefile
@@ -1,9 +1,5 @@
-# Ports collection makefile for:	isc-dhcp42-relay
-# Date created:				29 June 2011
-# Whom:					Ryan Steinmetz <rpsfa@rit.edu>
-#
+# Created by: Ryan Steinmetz <rpsfa@rit.edu>
 # $FreeBSD$
-#
 
 COMMENT=	The ISC Dynamic Host Configuration Protocol relay
 
