- Fix the build if old freerdp exists in the system - Delete unused GNU_CONFIGURE and CPPFLAGS
PR:		177405
Submitted by:	Koichiro IWAO <meta+ports AT vmeta DOT jp
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316015 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/freerdp/Makefile
+++ b/net/freerdp/Makefile
@@ -20,11 +20,9 @@ GH_ACCOUNT=	FreeRDP
 GH_PROJECT=	FreeRDP
 GH_COMMIT=	616aed4
 GH_TAGNAME=	${GH_COMMIT}
-GNU_CONFIGURE=	yes
 
 LDFLAGS+=	-L${LOCALBASE}/lib
-CFLAGS+=	-I${LOCALBASE}/include
-CPPFLAGS+=	-I${LOCALBASE}/include
+CFLAGS+=	-I${WRKSRC}/include -I${LOCALBASE}/include
 
 OPTIONS_DEFINE=	ALSA CUPS DIRECTFB FFMPEG PULSEAUDIO SSE X11
 OPTIONS_DEFAULT=	CUPS PULSEAUDIO X11
