Console based password storing application using an encrypted XML document as its database.
WWW: http://keychain.googlecode.com

PR:		ports/177191
Submitted by:	LEVAI Daniel <leva@ecentrum.hu>
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316020 35697150-7ecd-e111-bb59-0022644237b5

--- a/security/Makefile
+++ b/security/Makefile
@@ -234,6 +234,7 @@
     SUBDIR += isnprober
     SUBDIR += jbrofuzz
     SUBDIR += john
+    SUBDIR += kc
     SUBDIR += kedpm
     SUBDIR += keepassx
     SUBDIR += keychain
