- Resurrect and update to the latest development version 2.17.16
Thanks to Kim Shrier <kim@westryn.net>, who has committed himself to helping
me in maintaining it up to date.

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316022 35697150-7ecd-e111-bb59-0022644237b5

--- a/print/Makefile
+++ b/print/Makefile
@@ -169,6 +169,7 @@
     SUBDIR += libppd
     SUBDIR += libspectre
     SUBDIR += lilypond
+    SUBDIR += lilypond-devel
     SUBDIR += linux-f10-cups-libs
     SUBDIR += lout
     SUBDIR += lpr-wrapper
