- Install the music and voice addons into the right place [1] - Add Remix Packs addons [2]
PR:	ports/176986
Submitted by:	Christoph Mallon <christoph.mallon@gmx.de> [1], Sender Ghost <lightside@gmx.com> [2]
Approved by:	maintainer timeout (4 weeks)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316024 35697150-7ecd-e111-bb59-0022644237b5

--- a/games/uqm/Makefile
+++ b/games/uqm/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	uqm
 PORTVERSION=	0.7.0
+PORTREVISION=	1
 CATEGORIES=	games
 MASTER_SITES=	SF/sc2/UQM/${PORTVERSION:R}
 DISTFILES=	${PORTNAME}-${PORTVERSION}-source.tgz ${PORTNAME}-${DATAVERSION}-content.uqm
@@ -24,6 +25,12 @@ DATAVERSION=	0.7.0
 OPTIONS_DEFINE=	VOICE MUSIC OPENAL DOCS
 MUSIC_DESC=	Music add-on
 VOICE_DESC=	Voice add-on
+OPTIONS_GROUP=	REMIXES
+REMIX_PACKS=	1 2 3 4
+.for i in ${REMIX_PACKS}
+OPTIONS_GROUP_REMIXES+=REMIXPACK${i}
+REMIXPACK${i}_DESC=	UQM Remix Pack ${i} add-on
+.endfor
 
 .include <bsd.port.options.mk>
 
@@ -45,43 +52,58 @@ PLIST_SUB+=	MUSICADDON="@comment "
 USE_OPENAL=	al
 .endif
 
+.for i in ${REMIX_PACKS}
+.	if ${PORT_OPTIONS:MREMIXPACK${i}}
+MASTER_SITES+=	SF/sc2/UQM%20Remix%20Packs/UQM%20Remix%20Pack%20${i}:remixpack${i}
+DISTFILES+=	${PORTNAME}-remix-disc${i}.uqm:remixpack${i}
+PLIST_SUB+=	REMIXPACK${i}ADDON=""
+.	else
+PLIST_SUB+=	REMIXPACK${i}ADDON="@comment "
+.	endif
+.endfor
+
 post-extract:
-	${MKDIR} ${WRKSRC}/content/packages
+	${MKDIR} ${WRKSRC}/content/addons ${WRKSRC}/content/packages
 	${CP} ${DISTDIR}/${PORTNAME}-${DATAVERSION}-content.uqm ${WRKSRC}/content/packages/
 .ifdef(WITH_VOICE)
-	${CP} ${DISTDIR}/${PORTNAME}-${DATAVERSION}-voice.uqm ${WRKSRC}/content/packages/
+	${CP} ${DISTDIR}/${PORTNAME}-${DATAVERSION}-voice.uqm ${WRKSRC}/content/addons/
 .endif
 .ifdef(WITH_MUSIC)
-	${CP} ${DISTDIR}/${PORTNAME}-${DATAVERSION}-3domusic.uqm ${WRKSRC}/content/packages/
+	${CP} ${DISTDIR}/${PORTNAME}-${DATAVERSION}-3domusic.uqm ${WRKSRC}/content/addons/
 .endif
+.for i in ${REMIX_PACKS}
+.	if ${PORT_OPTIONS:MREMIXPACK${i}}
+	${CP} ${DISTDIR}/${PORTNAME}-remix-disc${i}.uqm ${WRKSRC}/content/addons/
+.	endif
+.endfor
 
 do-configure:
-	@${ECHO_MSG} CHOICE_debug_VALUE=\'nodebug\' >  ${WRKSRC}/config.state
-	@${ECHO_MSG} CHOICE_graphics_VALUE=\'opengl\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} CHOICE_debug_VALUE=\'nodebug\' >  ${WRKSRC}/config.state
+	@${ECHO_CMD} CHOICE_graphics_VALUE=\'opengl\' >> ${WRKSRC}/config.state
 .if ${PORT_OPTIONS:MOPENAL}
-	@${ECHO_MSG} CHOICE_sound_VALUE=\'openal\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} CHOICE_sound_VALUE=\'openal\' >> ${WRKSRC}/config.state
 .else
-	@${ECHO_MSG} CHOICE_sound_VALUE=\'mixsdl\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} CHOICE_sound_VALUE=\'mixsdl\' >> ${WRKSRC}/config.state
 .endif
-	@${ECHO_MSG} CHOICE_mikmod_VALUE=\'external\' >> ${WRKSRC}/config.state
-	@${ECHO_MSG} CHOICE_ovcodec_VALUE=\'standard\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} CHOICE_mikmod_VALUE=\'external\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} CHOICE_ovcodec_VALUE=\'standard\' >> ${WRKSRC}/config.state
 .ifdef(NO_INET6)
-	@${ECHO_MSG} CHOICE_netplay_VALUE=\'full\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} CHOICE_netplay_VALUE=\'full\' >> ${WRKSRC}/config.state
 .else
-	@${ECHO_MSG} CHOICE_netplay_VALUE=\'ipv4\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} CHOICE_netplay_VALUE=\'ipv4\' >> ${WRKSRC}/config.state
 .endif
-	@${ECHO_MSG} CHOICE_joystick_VALUE=\'enabled\' >> ${WRKSRC}/config.state
-	@${ECHO_MSG} CHOICE_ioformat_VALUE=\'stdio_zip\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} CHOICE_joystick_VALUE=\'enabled\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} CHOICE_ioformat_VALUE=\'stdio_zip\' >> ${WRKSRC}/config.state
 .if ${ARCH} == "i386"
-	@${ECHO_MSG} CHOICE_accel_VALUE=\'asm\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} CHOICE_accel_VALUE=\'asm\' >> ${WRKSRC}/config.state
 .else
-	@${ECHO_MSG} CHOICE_accel_VALUE=\'plainc\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} CHOICE_accel_VALUE=\'plainc\' >> ${WRKSRC}/config.state
 .endif
-	@${ECHO_MSG} CHOICE_threadlib_VALUE=\'sdl\' >> ${WRKSRC}/config.state
-	@${ECHO_MSG} INPUT_install_prefix_VALUE=\'${PREFIX}\' >> ${WRKSRC}/config.state
-	@${ECHO_MSG} INPUT_install_bindir_VALUE=\''$$prefix/bin'\' >> ${WRKSRC}/config.state
-	@${ECHO_MSG} INPUT_install_libdir_VALUE=\''$$prefix/lib'\' >> ${WRKSRC}/config.state
-	@${ECHO_MSG} INPUT_install_sharedir_VALUE=\''$$prefix/share'\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} CHOICE_threadlib_VALUE=\'sdl\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} INPUT_install_prefix_VALUE=\'${PREFIX}\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} INPUT_install_bindir_VALUE=\''$$prefix/bin'\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} INPUT_install_libdir_VALUE=\''$$prefix/lib'\' >> ${WRKSRC}/config.state
+	@${ECHO_CMD} INPUT_install_sharedir_VALUE=\''$$prefix/share'\' >> ${WRKSRC}/config.state
 	cd ${WRKSRC} && ${SETENV} LOCALBASE=${LOCALBASE} PREFIX=${PREFIX} ./build.sh uqm config
 
 do-build:
