- Fix a long standing problem in tclConfig.sh and tkConfig.sh, where paths   were set based on WRKSRC instead of PREFIX.
  This mainly affected TEA-based extensions that source tclConfig.sh /
  tkConfig.sh to set important variables. An example is TCL_SRC_DIR, which
  is used to locate Tcl/Tk private header files such as tclUnixPort.h or
  tkUnixPort.h. This variable was previously set to WRKSRC, which caused
  ports to need additional tweaks to CFLAGS or CONFIGURE_ARGS.

  It should now be possible to build TEA-based extensions by specifying only
  the CONFIGURE_ARGS --with-tcl=${TCL_LIBDIR} / --with-tk=${TK_LIBDIR}.

Feature safe:	yes
Approved by:	bapt (portmgr)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316025 35697150-7ecd-e111-bb59-0022644237b5

--- a/lang/tcl85/Makefile
+++ b/lang/tcl85/Makefile
@@ -70,6 +70,14 @@ PLIST_SUB+=		TZDATA="@comment "
 CONFIGURE_ARGS+=--without-tzdata
 .endif
 
+post-patch:
+	${REINPLACE_CMD} -e \
+	    's|@TCL_BUILD_LIB_SPEC@|@TCL_LIB_SPEC@|; \
+	     s|@TCL_BUILD_STUB_LIB_SPEC@|@TCL_STUB_LIB_SPEC@|; \
+	     s|@TCL_BUILD_STUB_LIB_PATH@|@TCL_STUB_LIB_PATH@|; \
+	     s|@TCL_SRC_DIR@|${PREFIX}/include/tcl${TCL_VER}|' \
+	     ${WRKSRC}/tclConfig.sh.in
+
 post-configure:
 	${REINPLACE_CMD} \
 		-e 's,-DNO_MEMMOVE=1,,' -e 's,-DNO_STRING_H=1,,' \
