update to 1.59, temporarily switching to the bundled tinyxml2
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316027 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/cppcheck/Makefile
+++ b/devel/cppcheck/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	cppcheck
-PORTVERSION=	1.58
+PORTVERSION=	1.59
 CATEGORIES=	devel
 MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTVERSION}/
 
@@ -11,14 +11,14 @@ COMMENT=	Static analysis of C/C++ code
 
 LICENSE=	GPLv3
 
-LIB_DEPENDS=	tinyxml:${PORTSDIR}/textproc/tinyxml
+#LIB_DEPENDS=	tinyxml:${PORTSDIR}/textproc/tinyxml
 
 USE_BZIP2=	yes
 USE_GMAKE=	yes
 
 ALL_TARGET=	cppcheck
 LDFLAGS+=	-L${LOCALBASE}/lib
-MAKE_ENV+=	TINYXML=-ltinyxml
+#MAKE_ENV+=	TINYXML=-ltinyxml
 
 OPTIONS_DEFINE=		MATCHCOMPILER RULES
 OPTIONS_DEFAULT=	MATCHCOMPILER RULES
@@ -53,9 +53,9 @@ MAKE_ENV+=	HAVE_RULES=yes
 .endif
 
 post-patch:
-	@${REINPLACE_CMD} \
-	-e 's|-Iexternals/tinyxml|-I${LOCALBASE}/include|' \
-		${WRKSRC}/Makefile
+#	@${REINPLACE_CMD} \
+#	-e 's|-Iexternals/tinyxml|-I${LOCALBASE}/include|' \
+#		${WRKSRC}/Makefile
 .if ${PORT_OPTIONS:MDOCS}
 	@${REINPLACE_CMD} -e '\|DB2MAN=|d' \
 		${WRKSRC}/Makefile
