- Update to b20100604 and unbreak - Add LICENSE
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316034 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/9base/Makefile
+++ b/devel/9base/Makefile
@@ -1,18 +1,16 @@
-# New ports collection makefile for:	9base
-# Date created:		4 March 2007
-# Whom:			Andrew Pantyukhin <infofarmer@FreeBSD.org>
-#
+# Created by: Andrew Pantyukhin <infofarmer@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	9base
-DISTVERSION=	b20090309
+DISTVERSION=	b20100604
 CATEGORIES=	devel
 MASTER_SITES=	http://dl.suckless.org/tools/
-DISTNAME=	${PORTNAME}-2
+DISTNAME=	${PORTNAME}-6
 
 MAINTAINER=	sbz@FreeBSD.org
 COMMENT=	Port of various original plan9 tools
+
+LICENSE=	MIT
 
 CFLAGS+=	-I. -c
 LDFLAGS+=	-L.
@@ -20,18 +18,17 @@ MANPREFIX=	${PREFIX}/9
 MAKE_ARGS=	PREFIX="${PREFIX}/9" CC="${CC}" MANPREFIX="${MANPREFIX}/man" \
 		CFLAGS="${CFLAGS}" LDFLAGS="${LDFLAGS}"
 MAKE_JOBS_UNSAFE=	yes
-APPS=		awk basename bc cat cleanname date dc echo grep mk rc sed \
-		seq sleep sort tee test touch tr uniq yacc
+APPS=		ascii awk basename bc cal cat cleanname cmp date dc du dd diff echo ed \
+		factor fortune fmt freq getflags grep hoc join look ls mk mkdir mtime pbd \
+		primes rc read sam sha1sum sed seq sleep sort split strings tail tee test \
+		touch tr troff unicode uniq unutf yacc
 MAN1=		${APPS:S|$|.1|}
-MAN7=		regexp.7
-
-BROKEN=		fails to build
 
 ONLY_FOR_ARCHS=	i386 amd64 sparc64
 ONLY_FOR_ARCHS_REASON=	has low-level code unavailable for ${ARCH}
 
 post-patch:
-	@${REINPLACE_CMD} -e 's|PREFIX|"${PREFIX}/9"|' ${WRKSRC}/rc/plan9ish.c
+	@${REINPLACE_CMD} -e 's|PREFIX|"${PREFIX}/9"|' ${WRKSRC}/lib9/get9root.c
 	@${REINPLACE_CMD} -e '/OBJTYPE!=/s|!=.*|=${ARCH:S,i386,386,:S,amd64,x86_64,:S,sparc64,sun4u,}|' ${WRKSRC}/lib9/Makefile
 
 post-install:
